added support for kie server via decorator

--- a/users-new/pom.xml
+++ b/users-new/pom.xml
@@ -356,6 +356,12 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.kie.server</groupId>
+      <artifactId>kie-server-client</artifactId>
+      <version>${version.org.kie}</version>
+    </dependency>
+
   </dependencies>
   <build>
   <!--finalName>${project.artifactId}</finalNamei-->
